--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <body>
 
 <h1 style="color: green;">This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p style="color: blueviolet;">This is a paragraph.</p>
 
-<p>This is a new paragraph!</p>
+<p style="color: red;">This is a new paragraph!</p>
 
 </body>
 </html> 
